tests/negative/runtime/int_overflow_mul/input.ci
void main() {
    int x = 9223372036854775807;  // INT64_MAX
    int y = x * 2;
    print(toString(y) + "\n");
}
